fix: Change center preview image to contain and center alignment

--- a/index.css
+++ b/index.css
@@ -1717,7 +1717,7 @@ a.secondary-btn[disabled] {
   font-weight: 500;
 }
 .result-image {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -1725,6 +1725,12 @@ a.secondary-btn[disabled] {
 }
 .result-image.visible {
   opacity: 1;
+}
+
+.result-media-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .result-video {
